# HJCD-IK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  globeik_ik_per_batch.yml  hjcd_ik_per_batch.yml  pyproject.toml
benchmark/: ik_benchmark.py
benchmarks/: ik_benchmark.py
hjcdik/: __init__.py
include/: device_utils.cuh  hjcd_kernel.h  hjcd_settings.h  math.cuh  util.h
include/test_cuh/: fetch_grid.cuh  panda_grid.cuh
include/test_urdf/: panda_12dof.urdf  panda_18dof.urdf  panda_24dof.urdf
scripts/: boostrap.sh  bootstrap_windows.bat
src/: globeik_kernel.cu  hjcd_kernel.cu  main.cpp  pybind_module.cpp  util.cpp
tests/: franka_goals_dataset.yml
