[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "hjcdik"
version = "0.0.1"
description = "Minimal Python bindings for hjcdik (C++/CUDA)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "You" }]

[tool.scikit-build]
cmake.version = ">=3.23"
build-dir = "build"
